refactor & base for contenty types  support

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,9 @@
     "figjam"
   ],
   "containsWidget": true,
-  "widgetApi": "1.0.0"
+  "widgetApi": "1.0.0",
+  "networkAccess": {
+    "allowedDomains": ["*"],
+    "reasoning": "Fetching sites metadata"
+  }
 }
